Files renaming and moving in order for the page to become functional

--- a/A1-level/a1level.html
+++ b/A1-level/a1level.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Landing-Page/main.css">
+    <link rel="stylesheet" href="../main.css">
     <title>✯ DP-LING Exercices A1</title>
 </head>
 <body>
     <nav class="navigationContainer mainMiddle">
-        <a href="../Landing-Page/main.html"><div class="navi-el" id="navi-el1">Strona główna</div></a>
+        <a href="../index.html"><div class="navi-el" id="navi-el1">Strona główna</div></a>
         <a href=""><div class="navi-el navi-el-middle" id="navi-el2">Poziom A1</div></a>
         <a href=""><div class="navi-el navi-el-middle" id="navi-el3">Poziom A2</div></a>
         <a href="../B1-level/b1level.html"><div class="navi-el navi-el-middle" id="navi-el4">Poziom B1</div></a>
